macro(obot_node node_name)
    add_executable(${PROJECT_NAME}_${node_name} ${node_name}.cpp)
    set_target_properties(${PROJECT_NAME}_${node_name} PROPERTIES OUTPUT_NAME ${node_name} PREFIX "")
    add_dependencies(${PROJECT_NAME}_${node_name} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
    target_link_libraries(${PROJECT_NAME}_${node_name} ${catkin_LIBRARIES} rt)
    target_include_directories(${PROJECT_NAME}_${node_name} PUBLIC ${OBOT_INCLUDE_DIR})
endmacro()

obot_node(arm_command)
obot_node(arm_status)
obot_node(arm_goal)
obot_node(arm_trajectories)
obot_node(joystick_arm_trajectory)
obot_node(joystick_base)
obot_node(velocity_to_tf)
obot_node(joystick_gripper)
obot_node(base_command)
obot_node(base_status)
#obot_node(arm_trajectory_gen)

